# soteira

./: .gitignore  README.md  STREAMING_GUIDE.md  api_server.py  cert.pem  clean_events.sh  debug_images.py  key.pem  llm_sink.py  main.py  phone_http_capture.py  phone_stream_server.py  pyproject.toml  pyproject_simple.toml  requirements.txt  requirements_api.txt  setup_streaming.md  test_streaming.py  test_structure.py  test_web_display.py  video_server.py
frontend/: app.js  index.html
gates/: __init__.py  motion.py  objects.py  scene.py
processing_output/: performance_summary.json
utils/: async_processor.py  frame_buffer.py  frame_sampler.py  image_quality.py  io.py  model_optimizer.py  performance.py  prompt_transformer.py  timing.py  video_streamer.py  web_display.py
